--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-
 <!DOCTYPE html>
 <html>
   <head>
   <meta charset="UTF-8">
     <title>Kim Neighborhood Project</title>
-    <style type="text/css">
-      html, body { height: 100%;}
-      #map {
-        height: 100%;
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+
+     <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+        async defer>
+    </script>
+
   </head>
   <body>
-  <ul>
     <h1 id="greeting" class="greeting">Philadelphia...</h1>
-    <h2 id="philaList" class="philaList">Learn Philadelphia...(Research Philadelphia...)</h2>
-    <h2 id="philaVisit" class="philaVisit">Live Philadelphia...(Visit & Experience Philadelphia...)</h2>
-    <h2 id="philaReview" class="philaVisit">Love Philadelphia...(Review & Revisit Philadelphia...)</h2>
-</ul>
+    <h4 id="favList" class="greetHeader">
+      <ul>Learn Philadelphia... Know Philadelphia Favorites
+      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+      </ul>
+    </h4>
+    <h4 class="greetHeader">Live Philadelphia... Come & Experience Philadelphia</h4>
+
+    <h4 class="greetHeader" >Love Philadelphia...Review & Revisit Philadelphia</h4>
+
     <div id="map"></div>
+
+
+    </ul>
       <script src="js/lib/knockout-3.2.0.js"></script>
       <script src="js/lib/jquery.min.js"></script>
-      <script src="js/philFav_script.js"></script>
-      <script src="js/philFav_ko.js"></script>
-      <script src="js/philApp_ko.js"></script>
+       <script src="js/philFav_ko.js"></script>
 
   </body>
 </html>
+
