--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <script src="js/lib/knockout-3.2.0.js"></script>
       <script src="js/lib/jquery.min.js"></script>
        <script src="js/philFav_ko.js"></script>
-
+      <script src="https://maps.googleapis.com/maps/api/js&libraries=places&callback=initAutocomplete"
+         async defer></script>
   </body>
 </html>
 
