--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 
       <title>Kim Neighborhood Project</title>
       <link rel="stylesheet" href="css/style.css">
-       <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
-        async defer></script>
+       <!--<script src="https://maps.googleapis.com/maps/api/js?callback=initMap"-->
+        <!--async defer></script>-->
 
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
   </head>
   <body>
@@ -17,27 +19,33 @@
     Learn Philadelphia... Know Philadelphia Favorites.....</h4>
     <h4 class = "greetHeader">Love Philadelphia...Review & Revisit Philadelphia....</h4>
   </header>
-  <main id = "searchbx">
+  <main id = "searchbx" class="col-sm-3">
     <h4>
       <input id="s-input" class="controls" type="search"
         data-bind ="textInput: query, valueUpdate: 'keyup'">
       </input>
     </h4>
-    <h1>Sites </h1>
-       <ul databind = "foreach: search()">
-       <li data-bind = "text: title"></li>
-    </ul>
+    <div id="listbx">
+      <h2>Sites</h2>
+      <div>
+        <ul data-bind="foreach: search()">
+          <li data-bind="text: myLocation"></li>
+        </ul>
+      </div>
+    </div>
+
+
   </main>
-
-  <div id="map"></div>
-
-    <script src="js/lib/knockout-3.2.0.js"></script>
-    <script src="js/lib/jquery.min.js"></script>
-    <script src="js/philaSearch_ko.js"></script>
-    <script src="js/philaMap_ko.js"></script>
+  <div id="map" class="col-sm-9"></div>
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&callback=initAutocomplete"
+  <script src="js/lib/knockout-3.4.0.js"></script>
+  <script src="js/lib/jquery-2.1.4.min.js"></script>
+  <script src="js/philaSearch_ko.js"></script>
+  <script src="js/philaMap_ko.js"></script>
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&?callback=initAutocomplete"
          async defer></script>
 
 
