remove older knockout library and cleanup calls to googlemap api.
 Changes to be committed:
	modified:   .idea/workspace.xml
        modified:   index.html
        deleted:    js/lib/knockout-3.2.0.js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 
       <title>Kim Neighborhood Project</title>
       <link rel="stylesheet" href="css/style.css">
-       <!--<script src="https://maps.googleapis.com/maps/api/js?callback=initMap"-->
-        <!--async defer></script>-->
 
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/bootstrap-theme.min.css" rel="stylesheet">
@@ -44,9 +42,10 @@
   <script src="js/philaSearch_ko.js"></script>
   <script src="js/philaMap_ko.js"></script>
 
-
-    <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&?callback=initAutocomplete"
-         async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+          async defer></script>
+  <!--<script src="https://maps.googleapis.com/maps/api/js?&libraries=places&?callback=initAutocomplete"-->
+         <!--async defer></script>-->
 
 
   </body>
