Search use same array as Map
Search use same array as map

--- a/indexClik.html
+++ b/indexClik.html
@@ -33,13 +33,17 @@
     </div>
 
 
+
   </main>
+
   <div id="map" class="col-sm-9"></div>
 
 
   <script src="js/lib/knockout-3.4.0.js"></script>
   <script src="js/lib/jquery-2.1.4.min.js"></script>
+  <script src="js/philaSearch_ko.js"></script>
   <script src="js/philaMap_ko.js"></script>
+
   <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
           async defer></script>
   <!--<script src="https://maps.googleapis.com/maps/api/js?&libraries=places&?callback=initAutocomplete"-->
